--- a/acset/css/style.css
+++ b/acset/css/style.css
@@ -7,3 +7,154 @@ html {
 body {
   font-family: 1.6rem;
 }
+/* ================header============ */
+.header {
+  height: 800px;
+  background-color: #10375c;
+}
+/* ==========container chung============ */
+.container {
+  max-width: calc(100% - 48px);
+  width: 1170px;
+  margin: 0 auto;
+}
+/* =======header - top======== */
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+}
+
+.nav .nav__list {
+  display: flex;
+  list-style: none;
+  /* gap: 32px; */
+}
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+.nav__list .nav__item {
+  padding: 8px 21px;
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+}
+.action .action__login {
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 16px;
+  line-height: 28px;
+  width: 49px;
+  height: 28px;
+}
+.action .action__signup {
+  font-family: Sora;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.6rem;
+  line-height: 28px;
+  text-align: center;
+  width: 104px;
+  height: 44px;
+  border-radius: 22px;
+  padding: 8px 20px;
+  margin-left: 48px;
+
+  background-color: #2e80ce;
+}
+.nav__link--ellip::before {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-right: 10px;
+  position: relative;
+}
+.nav__item .nav_link {
+  color: #c9d2da;
+}
+.nav_link:hover {
+  color: #ffffff;
+}
+/* =======header - bottom======== */
+.header__bottom {
+  display: flex;
+  gap: 113px;
+  padding: 0 30px;
+  margin-top: 46px;
+}
+/* =======header - left======== */
+.header__left {
+  width: 41%;
+  margin-top: 60px;
+}
+.header__left .heading__2 {
+  font-family: Sora;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 70px;
+  line-height: 80px;
+  color: #ffffff;
+  width: 517px;
+}
+.header__left .page__1 {
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 22px;
+  color: #c9d2da;
+}
+.header__left .button__and_p {
+  display: flex;
+  align-items: center;
+  gap: 38px;
+  margin-top: 38px;
+}
+.header__left .button__primary {
+  display: inline-block;
+  width: 205px;
+  height: 60px;
+  border-radius: 30px;
+  font-family: Sora;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 58px;
+  text-align: center;
+  background-color: #2e80ce;
+}
+.header__left .button__primary:hover {
+  background-color: #1c5dab;
+}
+.header__left .page__2 {
+  font-family: Sora;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  color: #ffffff;
+}
+/* =======header - right======== */
+.header__right {
+  flex: 1;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
+  height: 534px;
+}
+.header__right .header__bottom--img2 {
+  margin-right: 10px;
+}
