--- a/acset/css/style.css
+++ b/acset/css/style.css
@@ -426,3 +426,167 @@ img.img3:hover {
 .testimonial__bottom .btn-lead:hover {
   background-color: #1c5dab;
 }
+/* ======== team =========== */
+.team {
+  margin-top: 170px;
+}
+/* top */
+.team .team__top {
+  width: 450px;
+  height: 158px;
+  margin: 0 auto;
+}
+.team__top .heading-5 {
+  font-family: Sora;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 50px;
+  line-height: 60px;
+  color: #10375c;
+}
+.team .btn-met {
+  display: inline-block;
+  width: 205px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: #2e80ce;
+  font-family: Sora;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  color: #ffffff;
+  padding: 15px 26px;
+  margin-top: 38px;
+  margin-left: 123px;
+}
+.team .btn-met:hover {
+  background-color: #1c5dab;
+}
+/* bottom */
+.team .team__bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-top: 70px;
+}
+.team__bottom .item__all {
+  width: 270px;
+  height: 384px;
+  border-radius: 6px;
+}
+.item__all .img {
+  width: 262px;
+  height: 318px;
+  border-radius: 6px;
+  background-color: #eaf6ff;
+}
+.item__all .img .img-3 {
+  margin-top: 32px;
+  width: 262px;
+  height: 290px;
+  border-radius: 6px;
+}
+.item__all .page-9 {
+  font-family: Sora;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  color: #10375c;
+  margin-top: 12px;
+}
+.item__all .page-10 {
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 14px;
+  line-height: 26px;
+  text-align: center;
+  color: #575f66;
+}
+/* btn-left-right */
+.btn-left-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 18px;
+}
+.btn-left-right .btn-left,
+.btn-left-right .btn-right {
+  width: 36px;
+  height: 36px;
+  border-radius: 25px;
+  border: 1px solid #575f66;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+.btn-left-right .btn-left:hover,
+.btn-left-right .btn-right:hover {
+  background-color: #2e80ce;
+}
+.btn-left-right .btn-left img,
+.btn-left-right .btn-right img {
+  color: black;
+}
+/* ========= cta =========== */
+.cta {
+  margin-top: 256px;
+}
+.cta .cta-all {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 70px;
+  background-color: #2e80ce;
+  height: 427px;
+  gap: 160px;
+  position: relative;
+}
+/* left */
+.img__6 {
+  width: 284px;
+  height: 522px;
+  obffect-fit: cover;
+  position: absolute;
+  top: -94px;
+}
+/* right */
+.cta-all .cta__right {
+  width: 586px;
+  height: 276px;
+}
+.cta__right .heading-6 {
+  font-family: Sora;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 50px;
+  line-height: 60px;
+  color: #ffffff;
+  width: 489px;
+}
+.cta__right .page-11 {
+  font-family: Sora;
+  font-weight: 300;
+  font-style: Light;
+  font-size: 22px;
+  line-height: 30px;
+  margin-top: 18px;
+  color: #ffffff;
+  margin-top: 18px;
+}
+.cta__right .ga {
+  width: 283px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 28px;
+  margin-top: 38px;
+}
