--- a/acset/css/style.css
+++ b/acset/css/style.css
@@ -339,7 +339,7 @@ img.img3:hover {
   margin: 18px 0 0 43px;
 }
 .word__seach a {
-  color: #575f66;
+  color: #2e80ce;
   font-family: Sora;
   font-weight: 400;
   font-style: Regular;
@@ -351,7 +351,7 @@ img.img3:hover {
   display: block;
 }
 .word__seach a:hover {
-  color: #2e80ce;
+  color: #10375c;
 }
 /* ========= testimonial ========*/
 .tes-ainm {
