--- a/acset/css/reponsive.css
+++ b/acset/css/reponsive.css
@@ -107,7 +107,7 @@
     font-size: 16px;
   }
   .nav-tablet {
-    padding-left: 14px;
+    padding: 0 14px;
   }
   /* hover / active */
   #nav__list-mobile li a:hover,
@@ -217,6 +217,9 @@
   .blog__left .left-fig {
     justify-content: center;
   }
+  .log-in__mobile {
+    display: none;
+  }
   /* Tablet */
   @media (min-width: 768px) and (max-width: 991.98px) {
     /* footer */
@@ -253,7 +256,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 138px;
+      width: 100%;
       gap: 8px;
       margin-top: 20px;
       height: 60px;
@@ -266,7 +269,7 @@
       font-style: Light;
       font-size: 16px;
       line-height: 28px;
-      padding: 8px 18px;
+      padding: 8px 28px;
     }
     .log-in__mobile .action__login-mobile:hover,
     .action__signup-mobile:hover {
